<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/app_padding">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:contentDescription="@string/profile_image_description"
            android:src="@mipmap/anonymous_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_take_photo" />

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_choose_photo" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:hint="@string/et_firstname"
            android:maxLength="20"
            android:maxLines="1"
<<<<<<< HEAD
            android:minLines="1"
            android:inputType="text"/>
=======
            android:minLines="1" />
>>>>>>> 3c98e8a6087ed16b3d8ced3960d8af0dcf61b92f

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:hint="@string/et_lastname"
            android:maxLength="20"
            android:maxLines="1"
<<<<<<< HEAD
            android:minLines="1"
            android:inputType="text"/>
=======
            android:minLines="1" />
>>>>>>> 3c98e8a6087ed16b3d8ced3960d8af0dcf61b92f

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_gender"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/tv_size" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtn_male"
                android:textSize="@dimen/tv_size" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobtn_female"
                android:textSize="@dimen/tv_size" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:text="@string/tv_birthday"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/tv_size"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:hint="@string/hint_et_email"
            android:inputType="textEmailAddress"
<<<<<<< HEAD
=======
            android:maxLength="20"
>>>>>>> 3c98e8a6087ed16b3d8ced3960d8af0dcf61b92f
            android:maxLines="1"
            android:minLines="1" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:hint="@string/hint_et_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:minLines="1" />

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin_below"
            android:hint="@string/hint_et_password_confirm"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:minLines="1" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_register" />
    </LinearLayout>

</ScrollView>