<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.lynxsolutions.norbertfogarasi.loginapp.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        android:background="@mipmap/icon"
        android:contentDescription="@string/icon_description"
        android:scaleType="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="@dimen/edittext_widt"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:hint="@string/edit_hint_username"
        android:maxLength="15"
        android:maxLines="1"
        android:minLines="1" />

    <EditText
        android:layout_width="@dimen/edittext_widt"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:hint="@string/edit_hint_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:minLines="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/btn_sign_up" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" />

</LinearLayout>
